tem um problema, mas terminou de implantar o security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,4 @@ spring.datasource.initialization-mode=never
 server.port=8080
 
 # Configuracoes do Token JWT
-#api.security.token.secret=${JWT_SECRET:my-secret-key}
+api.security.token.secret=${JWT_SECRET:my-secret-key}
