--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 			<scope>test</scope>
 		</dependency>
 
+
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.18.1</version> <!-- Use a versão mais recente disponível -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
