resolvendo o problema dos cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ server.port=8080
 
 # Configuracoes do Token JWT
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+logging.level.org.springframework.security=DEBUG
