--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
 
 # Desabilita a inicializacao do DataSource (pode interferir com o Flyway)
-spring.datasource.initialization-mode=never
+spring.sql.init.mode=never
 
 # Configuracoes do servidor
 server.port=8080
@@ -24,3 +24,5 @@ server.port=8080
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 
 logging.level.org.springframework.security=DEBUG
+
+#logging.level.root=DEBUG
